# QuickAI

./: .babelrc  .env  .gitignore  README.md  chat.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
service/: .env  package-lock.json
service/src/: index.ts  types.ts
service/src/chatgpt/: index.ts  types.ts
src/: App.vue  ChatWindow.vue  auto-import.d.ts  chat.ts  main.ts  more-setting.ts  search-every-thing.ts  search.html  select-content.ts  select.html  settings.html  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  command.rs  event.rs  main.rs  select.rs  shortcut.rs  task.rs  tray.rs  utils.rs  windows.rs
src-tauri/src/easy_thing/: foreground.rs  input.rs  mod.rs
src-tauri/src/tauri_windows/: chat.rs  chatgpt.rs  mod.rs  search.rs  select.rs  settings.rs
src/api/: index.ts
src/assets/scss/: dark.scss  default.scss  global.scss  index.scss
src/components/: ChatMode.vue  Emoji.vue  EveryThing.vue  FileCard.vue  Greet.vue  HeadPortrait.vue  IconLogo.vue  MarkdownView.vue  Menu.vue  MoreSetting.vue  Prompt.vue  Result.vue  SearchList.vue  Select.vue  Tools.vue  chatwindow.vue  index.ts  loading.vue
src/components/multiInput/: index.vue
src/components/multiInput/modules/: fileList.vue
src/hooks/: api.ts  getData.ts  store.ts  useAPI.ts  useChat.ts  useClipboard.ts  useFile.ts  useRecord.ts  useScroll.ts  useSettings.ts
src/layouts/: index.vue
src/layouts/header/: index.vue
src/layouts/main/: index.vue
src/route/: index.ts  permission.ts
src/store/modules/: index.ts
src/store/modules/auth/: index.ts
src/store/modules/chat/: helper.ts  index.ts
src/store/modules/record/: helper.ts  index.ts
src/store/modules/settings/: helper.ts  index.ts
src/typings/: chat.d.ts  input.ts
src/utils/: index.ts
src/utils/request/: axios.ts  index.ts
src/views/: test.vue
src/views/chatGPT4/: index.vue
src/views/chatwin/: index.vue
src/views/home/: index.vue
src/views/prompt/: index.vue
src/views/quickAsk/: index.vue
src/views/singalChat/: index.vue
src/views/testPage/: index.vue
