[package]
name = "quick-ai"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = "quick-ai"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features= ["global-shortcut", "global-shortcut-all", "macos-private-api", "shell-open", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clipboard = "0.5.0"
enigo = {git = "https://github.com/enigo-rs/enigo"}
mouse_position = "0.1.3"
once_cell = "1.17.1"
anyhow = "1.0.0"
parking_lot = "0.12.1"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
window-shadows = "0.2.1"
tracing = "0.1"
tracing-subscriber = "0.3"
window-vibrancy = "0.3.2"
tokio = { version = "1.27", features = ["rt-multi-thread", "sync", "time"] }
rdev = "0.5.2"
[target.'cfg(not(target_os = "macos"))'.dependencies]
winit = "0.28.3"
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { version = "0.24.1" }
objc = { version = "0.2.7" }

[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_UI_Input_Ime", 
    "Win32_Foundation", 
    "Win32_Globalization", 
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
]

[dependencies.windows]
version = "0.48"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
